--- a/templates/db_manager/setup.html
+++ b/templates/db_manager/setup.html
@@ -150,8 +150,8 @@
                     <div class="form-group row mb-3">
                         <label for="port" class="col-sm-3 col-form-label">{% trans "المنفذ" %}</label>
                         <div class="col-sm-9">
-                            <input type="text" name="port" id="port" class="form-control" value="5432">
-                            <small class="form-text text-muted">{% trans "منفذ الاتصال بقاعدة البيانات (مثال: 5432 لـ PostgreSQL، 3306 لـ MySQL)" %}</small>
+                            <input type="text" name="port" id="port" class="form-control" value="5433">
+                            <small class="form-text text-muted">{% trans "منفذ الاتصال بقاعدة البيانات (مثال: 5433 لـ PostgreSQL، 3306 لـ MySQL)" %}</small>
                         </div>
                     </div>
 
@@ -172,7 +172,7 @@
                     <div class="form-group row mb-3">
                         <label for="database_name" class="col-sm-3 col-form-label">{% trans "اسم قاعدة البيانات" %}</label>
                         <div class="col-sm-9">
-                            <input type="text" name="database_name" id="database_name" class="form-control" value="crm">
+                            <input type="text" name="database_name" id="database_name" class="form-control" value="crm_system">
                         </div>
                     </div>
 
